Image folder addition

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,6 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;500;700&display=swap" rel="stylesheet">
 </head>
+
 <body>
     <table id="main-table">
         <tr>
@@ -18,7 +20,8 @@
                     <tr>
                         <td>
                             <h1>Let's Dance</h1>
-                            <p style="font-size: 14px;">Lorem ipsum dolor sit amet, consectetur<br/> adipiscing elit. Vivamus lacinia odio vitae<br/> vestibulum vestibulum. </p>
+                            <p style="font-size: 14px;">Lorem ipsum dolor sit amet, consectetur<br /> adipiscing elit.
+                                Vivamus lacinia odio vitae<br /> vestibulum vestibulum. </p>
                             <form>
                                 <button id="register">REGISTER NOW</button>
                             </form>
@@ -30,13 +33,14 @@
                     <tr>
                         <td colspan="3" align="center">
                             <h1>DANCE TOUR</h1>
-                            <p>Lorem ipsum dolor sit amet, consectetur<br/> adipiscing elit. Vivamus lacinia odio vitae<br/> vestibulum vestibulum.</p>
+                            <p>Lorem ipsum dolor sit amet, consectetur<br /> adipiscing elit. Vivamus lacinia odio
+                                vitae<br /> vestibulum vestibulum.</p>
                         </td>
                     </tr>
                     <tr>
-                        <td class="cnty1"><img src="../images/usa.png"> </td>
-                        <td class="cnty1"><img src="../images/asia.png"> </td>
-                        <td class="cnty1"><img src="../images/aus.png"> </td>
+                        <td class="cnty1"><img src="./images/usa.png"> </td>
+                        <td class="cnty1"><img src="./images/asia.png"> </td>
+                        <td class="cnty1"><img src="./images/aus.png"> </td>
                     </tr>
                 </table>
 
@@ -44,19 +48,20 @@
                     <tr>
                         <td colspan="3" align="center" style="padding-top: 40px;padding-bottom: 30px;">
                             <h1>PRICING</h1>
-                            <p>Lorem ipsum dolor sit amet, consectetur<br/> adipiscing elit. Vivamus lacinia odio vitae<br/> vestibulum vestibulum.</p>
+                            <p>Lorem ipsum dolor sit amet, consectetur<br /> adipiscing elit. Vivamus lacinia odio
+                                vitae<br /> vestibulum vestibulum.</p>
                         </td>
                     </tr>
                     <tr>
                         <td class="price">
                             <table class="card">
                                 <tr>
-                                    <td><img src="../images/Icon.png"></td>
+                                    <td><img src="./images/Icon.png"></td>
                                 </tr>
                                 <tr>
                                     <td>
                                         <h4>PROFESSION</h4>
-                                        <p>Lorem ipsum dolor<br/> sit amet</p>
+                                        <p>Lorem ipsum dolor<br /> sit amet</p>
                                     </td>
                                 </tr>
                                 <tr>
@@ -69,12 +74,12 @@
                         <td class="price">
                             <table class="card">
                                 <tr>
-                                    <td><img src="../images/Icon.png"></td>
+                                    <td><img src="./images/Icon.png"></td>
                                 </tr>
                                 <tr>
                                     <td>
                                         <h4>PROFESSION</h4>
-                                        <p>Lorem ipsum dolor<br/> sit amet</p>
+                                        <p>Lorem ipsum dolor<br /> sit amet</p>
                                     </td>
                                 </tr>
                                 <tr>
@@ -87,12 +92,12 @@
                         <td class="price">
                             <table class="card">
                                 <tr>
-                                    <td><img src="../images/Icon.png"></td>
+                                    <td><img src="./images/Icon.png"></td>
                                 </tr>
                                 <tr>
                                     <td>
                                         <h4>PROFESSION</h4>
-                                        <p>Lorem ipsum dolor<br/> sit amet</p>
+                                        <p>Lorem ipsum dolor<br /> sit amet</p>
                                     </td>
                                 </tr>
                                 <tr>
@@ -107,18 +112,20 @@
 
                 <table id="more">
                     <tr>
-                        <td><img src="../images/more1.png"</td>
+                        <td><img src="./images/more1.png" </td>
                         <td style="background-color: #e8631c;">
                             <h1>AMAZING DANCING</h1>
-                            <p>Lorem ipsum dolor sit amet, consectetur<br/> adipiscing elit. Vivamus lacinia odio vitae<br/> vestibulum vestibulum.</p>
+                            <p>Lorem ipsum dolor sit amet, consectetur<br /> adipiscing elit. Vivamus lacinia odio
+                                vitae<br /> vestibulum vestibulum.</p>
                         </td>
                     </tr>
                     <tr>
                         <td style="background-color: #e8631c;">
                             <h1>BEST DANCE</h1>
-                            <p>Lorem ipsum dolor sit amet, consectetur<br/> adipiscing elit. Vivamus lacinia odio vitae<br/> vestibulum vestibulum.</p>
+                            <p>Lorem ipsum dolor sit amet, consectetur<br /> adipiscing elit. Vivamus lacinia odio
+                                vitae<br /> vestibulum vestibulum.</p>
                         </td>
-                        <td><img src="../images/more2.png"</td>
+                        <td><img src="./images/more2.png" </td>
                     </tr>
                 </table>
 
@@ -126,18 +133,19 @@
                     <tr>
                         <td colspan="3">
                             <h1>OUR STATISTICS</h1>
-                            <p>Lorem ipsum dolor sit amet, consectetur<br/> adipiscing elit. Vivamus lacinia odio vitae<br/> vestibulum vestibulum.</p>
+                            <p>Lorem ipsum dolor sit amet, consectetur<br /> adipiscing elit. Vivamus lacinia odio
+                                vitae<br /> vestibulum vestibulum.</p>
                         </td>
                     </tr>
                     <tr>
                         <td class="analyst">
-                            1240+<br/>Club
+                            1240+<br />Club
                         </td>
                         <td class="analyist">
-                            1240+<br/>Club
+                            1240+<br />Club
                         </td>
                         <td class="analyist">
-                            1240+<br/>Club
+                            1240+<br />Club
                         </td>
                     </tr>
                 </table>
@@ -145,7 +153,8 @@
                 <table id="model">
                     <tr>
                         <td>
-                            <p>Lorem ipsum dolor sit amet, consectetur<br/> adipiscing elit. Vivamus lacinia odio vitae<br/> vestibulum vestibulum.</p>
+                            <p>Lorem ipsum dolor sit amet, consectetur<br /> adipiscing elit. Vivamus lacinia odio
+                                vitae<br /> vestibulum vestibulum.</p>
                             <h1>HERBERT SIMON</h1>
                         </td>
                     </tr>
@@ -155,7 +164,8 @@
                     <tr>
                         <td>
                             <h1>SUBSCRIBE</h1>
-                            <p>Lorem ipsum dolor sit amet, consectetur<br/> adipiscing elit. Vivamus lacinia odio vitae<br/> vestibulum vestibulum.</p>
+                            <p>Lorem ipsum dolor sit amet, consectetur<br /> adipiscing elit. Vivamus lacinia odio
+                                vitae<br /> vestibulum vestibulum.</p>
                             <form>
                                 <input type="email" placeholder="Your Email">
                                 <button id="sub">SUBSCRIBE</button>
@@ -167,4 +177,5 @@
         </tr>
     </table>
 </body>
+
 </html>
